--- a/index.html
+++ b/index.html
@@ -2,82 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy – Craft Pachnad App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy – CraftPachnad</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      padding: 20px;
       max-width: 900px;
       margin: auto;
+      padding: 20px;
       background: #ffffff;
       color: #000000;
     }
-    h1, h2 {
+    h1, h2, h3 {
       color: #222;
     }
-    hr {
-      margin: 20px 0;
+    ul {
+      padding-left: 20px;
     }
   </style>
 </head>
 <body>
 
-<h1>Privacy Policy for Craft Pachnad App</h1>
-<p><strong>Last updated:</strong> December 2025</p>
+<h1>Privacy Policy for CraftPachnad</h1>
+<p><strong>Last Updated:</strong> March 2026</p>
 
-<hr>
-
+<h2>Introduction</h2>
 <p>
-Craft Pachnad (“we”, “our”, or “us”) operates the Craft Pachnad mobile application.
-This page informs you about our policies regarding the collection, use, and disclosure
-of personal information when you use our app.
+CraftPachnad ("we", "our", or "us") is committed to protecting your privacy.
+This Privacy Policy explains how we collect, use, and safeguard your information
+when you use the CraftPachnad mobile application ("App").
 </p>
 
 <h2>Information We Collect</h2>
+
+<h3>Personal Information</h3>
 <ul>
-  <li>Name</li>
-  <li>Mobile number</li>
-  <li>Email address (optional)</li>
-  <li>Profile photo uploaded by the user</li>
+  <li><strong>Phone Number:</strong> Used for authentication and account security.</li>
+  <li><strong>Name:</strong> Used to personalize banners and app experience.</li>
+  <li><strong>Profile Photo:</strong> Uploaded by you and stored securely.</li>
+</ul>
+
+<h3>Automatically Collected Information</h3>
+<ul>
+  <li><strong>Device Information:</strong> Device model, OS version, and app version.</li>
+  <li><strong>Usage Data:</strong> App interactions and feature usage.</li>
+</ul>
+
+<h3>User-Generated Content</h3>
+<ul>
+  <li>Photos and images uploaded by users</li>
+  <li>Banner designs created inside the app</li>
 </ul>
 
 <h2>How We Use Your Information</h2>
 <ul>
-  <li>To provide banner creation features</li>
-  <li>To personalize templates</li>
-  <li>To improve app performance</li>
-  <li>For authentication and security</li>
+  <li>To provide and improve app features</li>
+  <li>To authenticate users securely</li>
+  <li>To store and manage user-created banners</li>
+  <li>To prevent misuse, fraud, or abuse</li>
+  <li>To provide customer support</li>
 </ul>
 
-<h2>Data Storage & Security</h2>
-<p>
-User data is securely stored using Firebase services.
-We apply industry-standard security measures to protect user information.
-</p>
+<h2>Data Storage and Security</h2>
+<ul>
+  <li>All data is stored securely using Firebase (Google Cloud Platform)</li>
+  <li>Industry-standard security measures are applied</li>
+  <li>We do not sell or share personal data with advertisers</li>
+</ul>
 
 <h2>Third-Party Services</h2>
 <p>
-The app uses third-party services such as Firebase Authentication, Firestore, and Firebase Storage
-to operate core features.
+CraftPachnad uses trusted third-party services:
+</p>
+<ul>
+  <li>Firebase Authentication</li>
+  <li>Cloud Firestore</li>
+  <li>Firebase Storage</li>
+  <li>Google Sign-In</li>
+</ul>
+
+<h2>SMS Permissions</h2>
+<p>
+The app may request SMS permissions (RECEIVE_SMS / READ_SMS) only to
+automatically detect One-Time Passwords (OTP) for phone number verification.
+</p>
+<ul>
+  <li>SMS content is <strong>not read, stored, or shared</strong></li>
+  <li>Permissions are used only for login verification</li>
+  <li>No SMS data is sent to any third party</li>
+</ul>
+
+<h2>Your Rights</h2>
+<ul>
+  <li>Access your personal information</li>
+  <li>Request correction or deletion of your data</li>
+  <li>Delete your account at any time</li>
+</ul>
+
+<h2>Data Retention</h2>
+<p>
+We retain user data only as long as required to provide services.
+Users may request permanent deletion at any time.
 </p>
 
 <h2>Children’s Privacy</h2>
 <p>
-This app is not intended for children under the age of 13.
-We do not knowingly collect personal data from children.
+CraftPachnad is not intended for children under the age of 13.
+We do not knowingly collect data from children.
 </p>
 
-<h2>Data Deletion</h2>
+<h2>Changes to This Policy</h2>
 <p>
-Users can request deletion of their data by contacting us at the email below.
+This policy may be updated from time to time.
+Any changes will be posted on this page.
 </p>
 
 <h2>Contact Us</h2>
 <p>
-<strong>Developer:</strong> Abhinav Pratap<br>
-<strong>Email:</strong> abhinavpratap623@gmail.com
+<strong>Developer:</strong> Abhinav Pratap<br />
+<strong>Email:</strong> abhinavpratap623@gmail.com<br />
+<strong>Country:</strong> India
 </p>
 
 </body>
