--- a/index.html
+++ b/index.html
@@ -2,128 +2,236 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy – CraftPachnad</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy – CraftPachnad</title>
+
   <style>
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #ffffff;
+      color: #1a1a1a;
+      margin: 0;
+      padding: 0;
+      line-height: 1.7;
+    }
+
+    .container {
       max-width: 900px;
       margin: auto;
-      padding: 20px;
-      background: #ffffff;
-      color: #000000;
+      padding: 32px 20px 60px;
     }
-    h1, h2, h3 {
-      color: #222;
+
+    h1 {
+      text-align: center;
+      font-size: 32px;
+      margin-bottom: 8px;
     }
+
+    .updated {
+      text-align: center;
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 40px;
+    }
+
+    h2 {
+      font-size: 22px;
+      margin-top: 36px;
+      border-bottom: 1px solid #e5e5e5;
+      padding-bottom: 6px;
+    }
+
+    h3 {
+      font-size: 18px;
+      margin-top: 20px;
+    }
+
+    p {
+      margin: 12px 0;
+    }
+
     ul {
-      padding-left: 20px;
+      margin: 10px 0 10px 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding-top: 20px;
+      border-top: 1px solid #e5e5e5;
+      font-size: 14px;
+      color: #444;
+    }
+
+    a {
+      color: #0066cc;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
 
-<h1>Privacy Policy for CraftPachnad</h1>
-<p><strong>Last Updated:</strong> March 2026</p>
+  <div class="container">
+    <h1>Privacy Policy for CraftPachnad</h1>
+    <div class="updated">Last Updated: January 2025</div>
 
-<h2>Introduction</h2>
-<p>
-CraftPachnad ("we", "our", or "us") is committed to protecting your privacy.
-This Privacy Policy explains how we collect, use, and safeguard your information
-when you use the CraftPachnad mobile application ("App").
-</p>
+    <h2>Introduction</h2>
+    <p>
+      CraftPachnad (“we”, “our”, “us”, or the “App”) respects your privacy and is committed
+      to protecting the personal information of users (“you”, “user”) who access or use
+      our mobile application and related services (“Platform”).
+    </p>
+    <p>
+      This Privacy Policy explains how we collect, use, store, process, and protect your
+      information in accordance with applicable Indian laws, including the Information
+      Technology Act, 2000 and the Digital Personal Data Protection Act, 2023 (DPDP Act).
+    </p>
+    <p>
+      CraftPachnad is operated and owned by the app owner, based in India. By using the
+      Platform, you agree to the practices described in this Privacy Policy.
+    </p>
 
-<h2>Information We Collect</h2>
+    <h2>1. Information We Collect</h2>
+    <p>
+      We collect only the minimum information required to provide and improve our services.
+      We do not collect sensitive personal data unless explicitly required by law.
+    </p>
 
-<h3>Personal Information</h3>
-<ul>
-  <li><strong>Phone Number:</strong> Used for authentication and account security.</li>
-  <li><strong>Name:</strong> Used to personalize banners and app experience.</li>
-  <li><strong>Profile Photo:</strong> Uploaded by you and stored securely.</li>
-</ul>
+    <h3>1.1 Information You Provide Voluntarily</h3>
+    <ul>
+      <li>Name, designation, or text manually added to posters or banners</li>
+      <li>Photos uploaded for background removal, image enhancement, or poster creation</li>
+      <li>Mobile number or email address (for login or support, if enabled)</li>
+      <li>Information shared when contacting customer support</li>
+    </ul>
+    <p>
+      Providing this information is optional, except where required to use specific features
+      of the App.
+    </p>
 
-<h3>Automatically Collected Information</h3>
-<ul>
-  <li><strong>Device Information:</strong> Device model, OS version, and app version.</li>
-  <li><strong>Usage Data:</strong> App interactions and feature usage.</li>
-</ul>
+    <h3>1.2 Information Collected Automatically</h3>
+    <ul>
+      <li>Device information (device model, operating system version, app version)</li>
+      <li>App usage data (features used, screens accessed)</li>
+      <li>Crash logs, diagnostics, and performance metrics</li>
+      <li>IP address and approximate location (city or region level only)</li>
+    </ul>
+    <p>
+      This information is used solely for app functionality, security, analytics, and
+      performance improvement.
+    </p>
 
-<h3>User-Generated Content</h3>
-<ul>
-  <li>Photos and images uploaded by users</li>
-  <li>Banner designs created inside the app</li>
-</ul>
+    <h3>1.3 Payments (If Applicable)</h3>
+    <ul>
+      <li>Payments are processed securely through trusted third-party payment gateways</li>
+      <li>We do not store or process debit/credit card details, UPI IDs, or banking information</li>
+    </ul>
 
-<h2>How We Use Your Information</h2>
-<ul>
-  <li>To provide and improve app features</li>
-  <li>To authenticate users securely</li>
-  <li>To store and manage user-created banners</li>
-  <li>To prevent misuse, fraud, or abuse</li>
-  <li>To provide customer support</li>
-</ul>
+    <h2>2. How We Use Your Information</h2>
+    <ul>
+      <li>Authenticate users (OTP or account login, if enabled)</li>
+      <li>Process images and generate posters or banners</li>
+      <li>Provide, operate, and improve App features</li>
+      <li>Monitor performance, fix bugs, and prevent misuse</li>
+      <li>Provide customer support</li>
+      <li>Comply with legal and regulatory obligations</li>
+    </ul>
 
-<h2>Data Storage and Security</h2>
-<ul>
-  <li>All data is stored securely using Firebase (Google Cloud Platform)</li>
-  <li>Industry-standard security measures are applied</li>
-  <li>We do not sell or share personal data with advertisers</li>
-</ul>
+    <h2>3. What We Do NOT Do</h2>
+    <ul>
+      <li>Sell, rent, or trade user data</li>
+      <li>Share user data with political parties or organizations</li>
+      <li>Track, profile, or analyze political opinions or preferences</li>
+      <li>Access user files, photos, or media without explicit user permission</li>
+    </ul>
 
-<h2>Third-Party Services</h2>
-<p>
-CraftPachnad uses trusted third-party services:
-</p>
-<ul>
-  <li>Firebase Authentication</li>
-  <li>Cloud Firestore</li>
-  <li>Firebase Storage</li>
-  <li>Google Sign-In</li>
-</ul>
+    <h2>4. Image Processing & AI Usage</h2>
+    <p>
+      Photos uploaded by users are processed only to perform selected actions such as
+      background removal, image enhancement, or poster generation.
+    </p>
+    <ul>
+      <li>Processing may occur locally on the user’s device</li>
+      <li>Or temporarily on secure servers solely to complete the requested operation</li>
+    </ul>
+    <p>
+      Uploaded images are automatically deleted after processing unless temporary retention
+      is required to complete the service. All processed images remain the property of the user.
+    </p>
 
-<h2>SMS Permissions</h2>
-<p>
-The app may request SMS permissions (RECEIVE_SMS / READ_SMS) only to
-automatically detect One-Time Passwords (OTP) for phone number verification.
-</p>
-<ul>
-  <li>SMS content is <strong>not read, stored, or shared</strong></li>
-  <li>Permissions are used only for login verification</li>
-  <li>No SMS data is sent to any third party</li>
-</ul>
+    <h2>5. Permissions</h2>
+    <ul>
+      <li>Storage / Media access: To upload images and save generated posters</li>
+      <li>Camera access (if enabled): To capture photos for editing</li>
+    </ul>
+    <p>
+      We do not access device hardware, files, or media without user consent.
+    </p>
 
-<h2>Your Rights</h2>
-<ul>
-  <li>Access your personal information</li>
-  <li>Request correction or deletion of your data</li>
-  <li>Delete your account at any time</li>
-</ul>
+    <h2>6. Legal Basis for Processing</h2>
+    <ul>
+      <li>User consent</li>
+      <li>Contractual necessity</li>
+      <li>Legitimate interests (security, analytics, app improvement)</li>
+      <li>Legal obligations under applicable laws</li>
+    </ul>
 
-<h2>Data Retention</h2>
-<p>
-We retain user data only as long as required to provide services.
-Users may request permanent deletion at any time.
-</p>
+    <h2>7. Data Security</h2>
+    <ul>
+      <li>Secure data transmission</li>
+      <li>Controlled and limited access to systems</li>
+      <li>Role-based internal access controls</li>
+    </ul>
+    <p>
+      While we strive to protect your data, no digital platform can guarantee absolute security.
+    </p>
 
-<h2>Children’s Privacy</h2>
-<p>
-CraftPachnad is not intended for children under the age of 13.
-We do not knowingly collect data from children.
-</p>
+    <h2>8. Data Retention & Deletion</h2>
+    <ul>
+      <li>Data is retained only as long as necessary or legally required</li>
+      <li>Users may request deletion of their data</li>
+      <li>Requests are processed within a reasonable timeframe</li>
+    </ul>
 
-<h2>Changes to This Policy</h2>
-<p>
-This policy may be updated from time to time.
-Any changes will be posted on this page.
-</p>
+    <h2>9. User Rights</h2>
+    <ul>
+      <li>Request access to personal data</li>
+      <li>Request correction of inaccurate data</li>
+      <li>Withdraw consent where applicable</li>
+      <li>Request deletion of personal data</li>
+    </ul>
 
-<h2>Contact Us</h2>
-<p>
-<strong>Developer:</strong> Abhinav Pratap<br />
-<strong>Email:</strong> abhinavpratap623@gmail.com<br />
-<strong>Country:</strong> India
-</p>
+    <h2>10. Third-Party Services</h2>
+    <ul>
+      <li>Analytics and crash reporting</li>
+      <li>Cloud infrastructure and storage</li>
+      <li>Authentication and payment processing (if enabled)</li>
+    </ul>
+
+    <h2>11. Children’s Privacy</h2>
+    <p>
+      CraftPachnad is not intended for children under the age of 13.
+    </p>
+
+    <h2>12. Changes to This Privacy Policy</h2>
+    <p>
+      We may update this Privacy Policy from time to time. Continued use of the Platform
+      constitutes acceptance of the revised Policy.
+    </p>
+
+    <h2>13. Contact & Grievance Information</h2>
+    <p>
+      📧 Email:
+      <a href="mailto:support@craftpachnad.com">support@craftpachnad.com</a>
+    </p>
+
+    <footer>
+      © 2025 CraftPachnad. All rights reserved.
+    </footer>
+  </div>
 
 </body>
 </html>
